# streamlit_app_databricks

./: .gitignore
streamlit-app/: pyproject.toml
streamlit-app/src/streamlit_app/: __init__.py  dal.py  main.py
